# cs293-plagiarism-detector

./: CMakeLists.txt  README.md  bloom_filter.cpp  bloom_filter.hpp  kmp.cpp  kmp.hpp  lcs.cpp  lcs.hpp  main.cpp  plagiarism_engine.cpp  plagiarism_engine.hpp  thread_pool.cpp  thread_pool.hpp  tokenizer.cpp  tokenizer.hpp  winnowing.cpp  winnowing.hpp
